tests/ui/explicit-tail-calls/become-outside.array.stderr
error[E0572]: become statement outside of function body
  --> $DIR/become-outside.rs:11:17
   |
LL | struct Bad([(); become f()]);
   |                 ^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0572`.
